add parsoid for three wiki
* rigpaparis
* frejaeriksson
* carmeigat

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -56,6 +56,7 @@ calexit: true
 calibro: true
 cancer: true
 carelli: true
+carmeigat: true
 carving: 'carving.wiki'
 casuarina: true
 cdc: true
@@ -115,6 +116,7 @@ fikcyjnatv: true
 fishpercolator: true
 fmbv: true
 foodsharinghamburg: true
+frejaeriksson: true
 freeandopen: true
 freestateofjones: true
 ferahistoria: true
@@ -276,6 +278,7 @@ raspberry: true
 rawdata: true
 raymanspeedrun: true
 revit: true
+rigpaparis: true
 roberts: true
 rootsandlimbs: true
 rs: true
