add "template" to parsoid

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -315,6 +315,7 @@ tcc6640: true
 techeducation: true
 tekken: true
 teleswiki: true
+template: true
 test: 'publictestwiki.com'
 testarkcls: true
 test1: true
