fix ve on maccnycwiki per T2689

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -193,7 +193,7 @@ lizard: true
 lovelivewiki: true
 luckandlogic: true
 lunfeng: true
-maccnyc: true
+maccnyc: 'wiki.macc.nyc'
 macfan4000: true
 magez: true
 magnaverse: true
