add "lambdawars" to parsoid

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -181,6 +181,7 @@ koza: true
 krebs: true
 kstartups: 'wiki.besuccess.com'
 kwiki: true
+lambdawars: true
 lancemedical: true
 lapolitics: true
 lbsges: true
