add "lzhscpwiki" to parsoid

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -194,6 +194,7 @@ lizard: true
 lovelivewiki: true
 luckandlogic: true
 lunfeng: true
+lzhscpwiki: true
 maccnyc: 'wiki.macc.nyc'
 macfan4000: true
 magez: true
