add "union" to parsoid

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -343,6 +343,7 @@ tws: true
 tymyrddin: true
 ubrwiki: true
 unikum: true
+union: true
 unionnorteamericana: true
 universebuild: 'universebuild.com'
 unmade: true
