Enabling Parsoid for harrypotter.miraheze.org
Per request T2719

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -137,6 +137,7 @@ grdarchive: true
 gtnh: true
 gze: true
 hamfem: true
+harrypotter: true
 healthvector: true
 hftqms: true
 historiaalternativa: true
