Adding Parsoid for VE to arefepva.miraheze.org
Per request T2729

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -23,6 +23,7 @@ alwiki: 'www.alwiki.net'
 animationmoviewiki: true
 apneuvereniging: true
 apps: true
+arefepva: true
 artificercreations: true
 aryaman: true
 atheneum: true
