add "gontran" to parsoid

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -131,6 +131,7 @@ generationsbamoro: true
 gepacobiodiv: true
 geresbamyan: true
 gnc: true
+gontran: true
 grandtheftwiki: true
 grandtheftauto: true
 grdarchive: true
