add "idw" to parsoid

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -151,6 +151,7 @@ hshsinfoportal: true
 hsooden: true
 hytec: true
 icmscholars: true
+idw: true
 ilearnthings: true
 imsts: true
 inazumaeleven: true
