add "stjarnfestivalen" to parsoid

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -314,6 +314,7 @@ spritopia: true
 starsetonline: true
 stellachronica: true
 sthomaspri: true
+stjarnfestivalen: true
 studynotekr: true
 takethatwiki: 'takethatwiki.com'
 tawseela: true
