add "undisclosed" to parsoid

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -347,6 +347,7 @@ tsponie: true
 tws: true
 tymyrddin: true
 ubrwiki: true
+undisclosed: true
 unikum: true
 union: true
 unionnorteamericana: true
