--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -316,6 +316,7 @@ stellachronica: true
 sthomaspri: true
 stjarnfestivalen: true
 studynotekr: true
+summerolympics: true
 takethatwiki: 'takethatwiki.com'
 tawseela: true
 tcc6640: true
