add "teria" to parsoid

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -324,6 +324,7 @@ techeducation: true
 tekken: true
 teleswiki: true
 template: true
+teria: true
 test: 'publictestwiki.com'
 testarkcls: true
 test1: true
