add "indrik" to parsoid

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -155,6 +155,7 @@ idw: true
 ilearnthings: true
 imsts: true
 inazumaeleven: true
+indrik: true
 inebriationconfederation: true
 innovwikiproto: true
 infectoped: true
