add "rwsales" to parsoid

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -290,6 +290,7 @@ roberts: true
 rootsandlimbs: true
 rs: true
 rwdvolvo: true
+rwsales: true
 safiria: true
 saharinspace: true
 savagewiki: 'savage-wiki.com'
