--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -270,6 +270,7 @@ pfsolutions: true
 pgnwiki: true
 plasticssongcontest: true
 plnonbinary: 'pl.nonbinary.wiki'
+pmav: true
 podpedia: true
 politics: true
 pq: true
