add parsoid for sapiens and fgnotes for request T2798 and T2803

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -112,6 +112,7 @@ fablabesds: true
 fantasia: true
 fbwiki: true
 feu: 'froggy.info'
+fgnotes: true
 fikcyjnatv: true
 fishpercolator: true
 fmbv: true
@@ -293,6 +294,7 @@ rwdvolvo: true
 rwsales: true
 safiria: true
 saharinspace: true
+sapiens: true
 savagewiki: 'savage-wiki.com'
 schicksalswiki: true
 scruffy: true
@@ -321,7 +323,7 @@ studynotekr: true
 summerolympics: true
 takethatwiki: 'takethatwiki.com'
 tawseela: true
-tcc6640: true
+tcc6640: trues 
 techeducation: true
 tekken: true
 teleswiki: true
