a little mistake (thanks trackpad and keyboard)

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -323,7 +323,7 @@ studynotekr: true
 summerolympics: true
 takethatwiki: 'takethatwiki.com'
 tawseela: true
-tcc6640: trues 
+tcc6640: true
 techeducation: true
 tekken: true
 teleswiki: true
