add "shortwiki" to parsoid

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -305,6 +305,7 @@ seldir: true
 seton: true
 serinfhosp: true
 shippingandmeta: true
+shortwiki: true
 showmedicina: true
 sidem: true
 simonjon: true
