Parsoid update for Visual
Done!

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -343,6 +343,7 @@ titania: true
 tme: true
 tnotes: true
 tochki: true
+toppsdigitalcardtrader: true
 tokyoghoul: true
 torejorg: true
 touhouengine: true
