--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -215,7 +215,7 @@ medergists: true
 medicina: true
 medlabiso: true
 menufeed: true
-meregos: true
+meregos: 'meregos.com'
 meta: true
 mikeandchrisproductions: true
 mikrodev: true
