add "socrates" to parsoid

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -311,6 +311,7 @@ sidem: true
 simonjon: true
 sirikot: true
 snowthegame: true
+socrates: true
 songcontests: true
 soshomophobie: true
 soundbox: 'www.soundbox.wiki'
