change eerstelijnszones parsoid to custom domain per request T2816

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -98,7 +98,7 @@ earthian: true
 easter: true
 easywiki: true
 edmund: true
-eerstelijnszones: true
+eerstelijnszones: 'www.eerstelijnszones.be'
 ellersliedemo: true
 ernaehrungsrathh: true
 espiral: 'espiral.org'
