add "vanderbiltent" to parsoid

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -367,6 +367,7 @@ uno: true
 uolu: true
 usse: true
 valentinaproject: 'wiki.valentinaproject.org'
+vanderbiltent: true
 vgalimenti: true
 viagroupia: true
 vicproject: true
