add "tocgamingproject" to parsoid

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -344,6 +344,7 @@ titania: true
 tme: true
 tnotes: true
 tochki: true
+tocgamingproject: true
 toppsdigitalcardtrader: true
 tokyoghoul: true
 torejorg: true
