--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -55,6 +55,7 @@ byblopedia: true
 calexit: true
 calibro: true
 cancer: true
+cantorij: true
 carelli: true
 carmeigat: true
 carving: 'carving.wiki'
