enable parsoid (tag) ve

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -325,6 +325,7 @@ sthomaspri: true
 stjarnfestivalen: true
 studynotekr: true
 summerolympics: true
+tag: true
 takethatwiki: 'takethatwiki.com'
 tawseela: true
 tcc6640: true
