add fluxordev on parsoid for request T2876

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -117,6 +117,7 @@ feu: 'froggy.info'
 fgnotes: true
 fikcyjnatv: true
 fishpercolator: true
+fluxordev: true
 fmbv: true
 foodsharinghamburg: true
 frejaeriksson: true
