add yourtechnicalservice on parsoid for request T2881

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -410,6 +410,7 @@ yeoksawiki: 'yeoksa.wiki'
 yggdrasilwiki: true
 ylsc: true
 yourosongcontest: true
+yourtechnicalservice: true
 youtube: true
 zendari: true
 zitabites: true
