--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -129,6 +129,7 @@ fsxworldspain: true
 fuse: true
 gameon: true
 ganesha: true
+garrettcountyguide: true
 geirpedia: true
 gen: true
 generalistprogram: true
