add communitydirectedsupportwiki on parsoid per req T2918

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -75,6 +75,7 @@ cnv: true
 cogitopedie: true
 conquestofparadiserp: true
 coldblooded: true
+communitydirectedsupport: true
 corydoctorow: true
 cristianopedia: true
 csnimsbordeaux: true
