add therubyserverwiki on parsoid per req T2920

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -347,6 +347,7 @@ thebb: true
 thecsc: true
 thefosters: true
 thehushhushsaga: true
+therubyserver: true
 theworld: true
 titania: true
 tme: true
