add vaswiki on parsoid per req T2925

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -378,6 +378,7 @@ uolu: true
 usse: true
 valentinaproject: 'wiki.valentinaproject.org'
 vanderbiltent: true
+vas: true
 vgalimenti: true
 viagroupia: true
 vicproject: true
