add alewiki on parsoid per req T2942

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -15,6 +15,7 @@ aidorupedia: true
 air: true
 aktpos: true
 alanpedia: true
+ale: true
 algopedia: true
 allbanks2: true
 allthetropes: 'allthetropes.org'
