--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -331,6 +331,7 @@ starsetonline: true
 stellachronica: true
 sthomaspri: true
 stjarnfestivalen: true
+studentwiki: true
 studynotekr: true
 summerolympics: true
 tag: true
