add tallerdecristianopedia on parsoid per req T2954

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -335,6 +335,7 @@ studynotekr: true
 summerolympics: true
 tag: true
 takethatwiki: 'takethatwiki.com'
+tallerdecristianopedia: true
 tawseela: true
 tcc6640: true
 techeducation: true
