add parsoid for itspugle for request T2948

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -172,6 +172,7 @@ ipoly: true
 irc: true
 islamwissenschaft: true
 isv: true
+itspugle: 'wiki.itspugle.ga'
 iwn: true
 izanagi: true
 janesskillspack: true
