--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -173,6 +173,7 @@ irc: true
 islamwissenschaft: true
 isv: true
 itspugle: 'wiki.itspugle.ga'
+iubris: true
 iwn: true
 izanagi: true
 janesskillspack: true
