add holonetwiki on parsoid per req T2969

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -155,6 +155,7 @@ hjelpemidler: true
 hktransportpedia: true
 hlptest: true
 hobbies: true
+holonet: true
 hshsinfoportal: true
 hsooden: true
 hytec: true
