add avalicearchives on parsoid per req T2968

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -29,6 +29,7 @@ artificercreations: true
 aryaman: true
 atheneum: true
 attackontitan: true
+avalicearchives: true
 ayrshire: true
 ayurbooks: true
 balcanopediascharlatanica: true
