Add geometrydashwiki to parsoid

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -138,6 +138,7 @@ geirpedia: true
 gen: true
 generalistprogram: true
 generationsbamoro: true
+geometrydash: true
 gepacobiodiv: true
 geresbamyan: true
 gnc: true
