--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -313,6 +313,7 @@ stjarnfestivalen: true
 studentwiki: true
 studynotekr: true
 summerolympics: true
+svenskabriardklubben: true
 tag: true
 takethatwiki: 'takethatwiki.com'
 tallerdecristianopedia: true
