--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -143,7 +143,7 @@ hftqms: true
 historiaalternativa: true
 hjelpemidler: true
 hobbies: true
-holonet: true
+holonet: 'holonet.pw'
 hshsinfoportal: true
 hsooden: true
 hytec: true
