--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -313,7 +313,7 @@ stjarnfestivalen: true
 studentwiki: true
 studynotekr: true
 summerolympics: true
-svenskabriardklubben: true
+svenskabriardklubben: 'wiki.svenskabriardklubben.se'
 tag: true
 takethatwiki: 'takethatwiki.com'
 tallerdecristianopedia: true
