Setup parsoid for velayat.miraheze.org per T2997

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -361,6 +361,7 @@ usse: true
 valentinaproject: 'wiki.valentinaproject.org'
 vanderbiltent: true
 vas: true
+velayat: true
 vgalimenti: true
 viagroupia: true
 vicproject: true
