Parsoid on schulwiki

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -288,6 +288,7 @@ saharinspace: true
 sapiens: true
 savagewiki: 'savage-wiki.com'
 schicksalswiki: true
+schulwiki: 'www.schulwiki.de'
 scruffy: true
 sdiy: true
 sea: true
