add masseffectwiki on parsoid per req T3019

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -207,6 +207,7 @@ make717: 'wiki.make717.org'
 maktaba: 'en.maktaba.co.in'
 marinebiodiversitymatrix: 'marinebiodiversitymatrix.org'
 marioserieswiki: true
+masseffect: true
 medergists: true
 medicina: true
 menufeed: true
