add "gkatom" to parsoid

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -130,6 +130,7 @@ generationsbamoro: true
 geometrydash: true
 gepacobiodiv: true
 geresbamyan: true
+gkatom: true
 gnc: true
 gontran: true
 grandtheftauto: true
