Adding Parsoid for VE for civclassic.miraheze.org
Per request T3050

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -66,6 +66,7 @@ changemyorg: 'changemy.org'
 chimaera: true
 christipedia: true
 ciso: true
+civclassic: true
 civitas: true
 clementsworldbuilding: true
 clicordi: true
