--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -88,6 +88,7 @@ didapro: true
 discovereachother: true
 dish: true
 dmw: true
+dobots: 'wiki.dobots.nl'
 doin: true
 doraemon: true
 dottorconte: 'wiki.dottorconte.eu'
