add edustudent on parsoid per req T3065

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -99,6 +99,7 @@ dwplive: 'wiki.dwplive.com'
 earthian: true
 easywiki: true
 edmund: true
+edustudent: true
 eerstelijnszones: 'www.eerstelijnszones.be'
 ellersliedemo: true
 espiral: 'espiral.org'
