--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -96,6 +96,7 @@ drones4all: 'wiki.drones4nature.info'
 drunkenpeasantswiki: true
 dts: true
 dwplive: 'wiki.dwplive.com'
+eaddemos: true
 earthian: true
 easywiki: true
 edmund: true
