Add lizhongresearch to parsoid so that restbase will work for this wiki

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -200,6 +200,7 @@ lingnlang: true
 literature: true
 littlebigplanet: true
 lizard: true
+lizhongresearch: true
 lovelivewiki: true
 luckandlogic: true
 lunfeng: true
