Enable services on skgy and spevt

--- a/services.yaml
+++ b/services.yaml
@@ -314,6 +314,8 @@ songcontests: true
 soshomophobie: true
 soundbox: 'www.soundbox.wiki'
 southparkfan: true
+skgy: true
+spevt: true
 spiral: 'spiral.wiki'
 spritopia: true
 starsetonline: true
