Add tesminadventureswiki to services

--- a/services.yaml
+++ b/services.yaml
@@ -337,6 +337,7 @@ tekken: true
 teleswiki: true
 template: true
 teria: true
+tesminadventures: true
 test: 'publictestwiki.com'
 testarkcls: true
 test1: true
