--- a/services.yaml
+++ b/services.yaml
@@ -82,7 +82,7 @@ cvsmb: true
 cybersecurity: true
 dalar: true
 datachron: true
-decrypted: true
+decrypted: 'decrypted.wiki'
 detlefs: true
 dicfic: true
 didapro: true
