Enable services for wiki.pupilliam.com

--- a/services.yaml
+++ b/services.yaml
@@ -334,6 +334,7 @@ tallerdecristianopedia: true
 tawseela: true
 tcc6640: true
 techeducation: true
+techwiki: 'wiki.pupilliam.com'
 tekken: true
 teleswiki: true
 template: true
