Enable services for stella

--- a/services.yaml
+++ b/services.yaml
@@ -321,6 +321,7 @@ spevt: true
 spiral: 'spiral.wiki'
 spritopia: true
 starsetonline: true
+stella: true
 stellachronica: true
 sthomaspri: true
 stjarnfestivalen: true
