Add maxwell to services

--- a/services.yaml
+++ b/services.yaml
@@ -217,6 +217,7 @@ maktaba: 'en.maktaba.co.in'
 marinebiodiversitymatrix: 'marinebiodiversitymatrix.org'
 marioserieswiki: true
 masseffect: true
+maxwell: true
 medergists: true
 medicina: true
 menufeed: true
