Adding enigma.miraheze.org to services

--- a/services.yaml
+++ b/services.yaml
@@ -104,6 +104,7 @@ edmund: true
 edustudent: true
 eerstelijnszones: 'www.eerstelijnszones.be'
 ellersliedemo: true
+enigma: true
 espiral: 'espiral.org'
 essway: true
 etpo: true
