add credco to services

--- a/services.yaml
+++ b/services.yaml
@@ -75,6 +75,7 @@ cnv: true
 cogitopedie: true
 communitydirectedsupport: true
 corydoctorow: true
+credco: true
 cristianopedia: true
 csnimsbordeaux: true
 cssandjsschoolboard: true
