Add reviwiki.info to services

--- a/services.yaml
+++ b/services.yaml
@@ -291,6 +291,7 @@ qwerty: true
 raspberry: true
 rawdata: true
 revit: true
+reviwiki: 'reviwiki.info'
 rigpaparis: true
 rootsandlimbs: true
 rs: true
