Enable services for pirategalaxy

--- a/services.yaml
+++ b/services.yaml
@@ -275,6 +275,7 @@ peopleshararam: true
 permanentfuturelab: 'permanentfuturelab.wiki'
 petctviewer: true
 pfsolutions: true
+pirategalaxy: true
 plasticssongcontest: true
 plazmaburst: true
 plnonbinary: 'pl.nonbinary.wiki'
