add hiawa to services

--- a/services.yaml
+++ b/services.yaml
@@ -150,6 +150,7 @@ hamfem: true
 harrypotter: true
 healthvector: true
 hftqms: true
+hiawa: true
 historiaalternativa: true
 hjelpemidler: true
 hobbies: true
