Enable services for lawrencescafuriwiki fixes T3185

--- a/services.yaml
+++ b/services.yaml
@@ -197,6 +197,7 @@ kstartups: 'wiki.besuccess.com'
 lambdawars: true
 lancemedical: true
 lapolitics: true
+lawrencescafuri: true
 l45test: true
 lbsges: true
 lexwiki: true
