custom domain for wiki.mikrodev.com

--- a/services.yaml
+++ b/services.yaml
@@ -229,7 +229,7 @@ menufeed: true
 meregos: 'meregos.com'
 meta: true
 mikeandchrisproductions: true
-mikrodev: true
+mikrodev: wiki.mikrodev.com
 mikrodevdocs: true
 miningpromies: true
 modelshipreference: true
