Add forexwiki to services

--- a/services.yaml
+++ b/services.yaml
@@ -102,6 +102,7 @@ fishpercolator: true
 fluxordev: true
 fmbv: true
 foodsharinghamburg: true
+forex: true
 frejaeriksson: true
 freestateofjones: true
 ferahistoria: true
