--- a/services.yaml
+++ b/services.yaml
@@ -275,6 +275,7 @@ pythia: true
 qwerty: true
 raspberry: true
 rawdata: true
+renaissance: true
 revit: true
 reviwiki: 'reviwiki.info'
 rigpaparis: true
