Adding sainsterbukawiki to services
Per request T3209

--- a/services.yaml
+++ b/services.yaml
@@ -286,6 +286,7 @@ rwdvolvo: true
 rwsales: true
 safiria: true
 saharinspace: true
+sainsterbuka: true
 sapiens: true
 savagewiki: 'savage-wiki.com'
 schicksalswiki: true
