add 2 wikis to services per phab

--- a/services.yaml
+++ b/services.yaml
@@ -236,6 +236,7 @@ noalatala: true
 nomic: true
 nonbinary: 'nonbinary.wiki'
 novaya: true
+nutrition: true
 nvc: true
 nwp: true
 nxwiki: true
@@ -347,6 +348,7 @@ tme: true
 tnotes: true
 tochki: true
 tocgamingproject: true
+toitumine: true
 toppsdigitalcardtrader: true
 tokyoghoul: true
 torejorg: true
