Add nonsensopediawiki to services

--- a/services.yaml
+++ b/services.yaml
@@ -235,6 +235,7 @@ nextlevelwiki: 'wiki.lbcomms.co.za'
 noalatala: true
 nomic: true
 nonbinary: 'nonbinary.wiki'
+nonsensopedia: true
 novaya: true
 nutrition: true
 nvc: true
