Add jwikiwiki to services

--- a/services.yaml
+++ b/services.yaml
@@ -162,6 +162,7 @@ jayuwiki: true
 jcs: 'wiki.gesamtschule-nordkirchen.de'
 jeongi: true
 justinbieber: true
+jwiki: true
 kai: true
 karmazynxyz: true
 karniaruthenia: true
