add "saoirsewiki" to services

--- a/services.yaml
+++ b/services.yaml
@@ -290,6 +290,7 @@ rwsales: true
 safiria: true
 saharinspace: true
 sainsterbuka: true
+saoirsewiki: true
 sapiens: true
 savagewiki: 'savage-wiki.com'
 schicksalswiki: true
