Enable services for jalproversewiki

--- a/services.yaml
+++ b/services.yaml
@@ -157,6 +157,7 @@ itspugle: 'wiki.itspugle.ga'
 iubris: true
 iwn: true
 izanagi: true
+jalproverse: true
 janesskillspack: true
 jayuwiki: true
 jcs: 'wiki.gesamtschule-nordkirchen.de'
