add services to archiwumsportowewiki

--- a/services.yaml
+++ b/services.yaml
@@ -14,6 +14,7 @@ allthetropes: 'allthetropes.org'
 alternatehistory: true
 alwiki: 'www.alwiki.net'
 apneuvereniging: true
+archiwumsportowe: true
 arefepva: true
 artificercreations: true
 attackontitan: true
