Enable services for hkimgboardwiki

--- a/services.yaml
+++ b/services.yaml
@@ -135,6 +135,7 @@ hftqms: true
 hiawa: true
 historiaalternativa: true
 hjelpemidler: true
+hkimgboard: true
 hobbies: true
 holonet: 'holonet.pw'
 hshsinfoportal: true
