Enable services on yourbuddywiki

--- a/services.yaml
+++ b/services.yaml
@@ -413,6 +413,7 @@ yacresources: true
 yeoksawiki: 'yeoksa.wiki'
 yggdrasilwiki: true
 ylsc: true
+yourbuddy: true
 yourosongcontest: true
 yourtechnicalservice: true
 youtube: true
