add services on tallerwiki

--- a/services.yaml
+++ b/services.yaml
@@ -330,6 +330,7 @@ summerolympics: true
 svenskabriardklubben: 'wiki.svenskabriardklubben.se'
 tag: true
 takethatwiki: 'takethatwiki.com'
+taller: true
 tallerdecristianopedia: true
 tawseela: true
 tcc6640: true
