Enable services for kerbalismwiki

--- a/services.yaml
+++ b/services.yaml
@@ -171,6 +171,7 @@ karmazynxyz: true
 karniaruthenia: true
 kassai: true
 kbrproject: true
+kerbalism: true
 kevininc: true
 kgb: true
 kinderacic: true
