Enable services for engineeringmathwiki

--- a/services.yaml
+++ b/services.yaml
@@ -86,6 +86,7 @@ edmund: true
 edustudent: true
 eerstelijnszones: 'www.eerstelijnszones.be'
 ellersliedemo: true
+engineeringmath: true
 enigma: true
 espiral: 'espiral.org'
 essway: true
