Add developingspacewiki to services per T3246

--- a/services.yaml
+++ b/services.yaml
@@ -66,6 +66,7 @@ dalar: true
 datachron: true
 decrypted: 'decrypted.wiki'
 detlefs: true
+developingspace: true
 dicfic: true
 didapro: true
 discovereachother: true
