Enable services for pushupswiki fixes  T3247

--- a/services.yaml
+++ b/services.yaml
@@ -278,6 +278,7 @@ priyo: true
 prnet: 'wiki.pablojprieto.com.es'
 prueba: 'es.publictestwiki.com'
 pso2: true
+pushups: true
 puzzle: true
 pwiki: 'pwiki.arkcls.com'
 pythia: true
