Enable services for wkupwiki fixes T3255

--- a/services.yaml
+++ b/services.yaml
@@ -408,6 +408,7 @@ wikipuc: 'wikipuk.cl'
 wisdomsandbox: 'sandbox.wisdomwiki.org'
 wisdom: 'wisdomwiki.org'
 wish: true
+wkup: true
 worldbuilding: true
 wthsapgov: true
 wustlnsgy: true
