Enable services for uzencwiki fixes T3267

--- a/services.yaml
+++ b/services.yaml
@@ -380,6 +380,7 @@ unmade: true
 uno: true
 uolu: true
 usse: true
+uzenc: 'enc.for.uz'
 valentinaproject: 'wiki.valentinaproject.org'
 vanderbiltent: true
 vas: true
