add "bloowiki" to services

--- a/services.yaml
+++ b/services.yaml
@@ -29,6 +29,7 @@ biblicalwiki: true
 bigforest: true
 bisk: true
 blocknet: true
+bloowiki: true
 bpa: true
 breedersofthenephelym: true
 brynda1231: true
