add "jordepedia" to services

--- a/services.yaml
+++ b/services.yaml
@@ -168,6 +168,7 @@ janesskillspack: true
 jayuwiki: true
 jcs: 'wiki.gesamtschule-nordkirchen.de'
 jeongi: true
+jordepedia: true
 justinbieber: true
 jwiki: true
 kai: true
