xxcircle to services T3296

--- a/services.yaml
+++ b/services.yaml
@@ -420,6 +420,7 @@ wustlnsgy: true
 xdjibi: true
 xdwxsty: true
 xjtlu: true
+xxcircle: true
 yacresources: true
 yeoksawiki: 'yeoksa.wiki'
 yggdrasilwiki: true
