add unidoswiki on services

--- a/services.yaml
+++ b/services.yaml
@@ -378,6 +378,7 @@ unab: true
 unmusicfest: true
 undisclosed: true
 unikum: true
+unidos: true
 union: true
 universebuild: 'universebuild.com'
 unmade: true
