add "fictionfoundry" to services

--- a/services.yaml
+++ b/services.yaml
@@ -102,6 +102,7 @@ fantasia: true
 fbwiki: true
 feu: 'froggy.info'
 fgnotes: true
+fictionfoundry: true
 fikcyjnatv: true
 fishpercolator: true
 fluxordev: true
