services on ckc for T3307

--- a/services.yaml
+++ b/services.yaml
@@ -54,6 +54,7 @@ civitas: true
 clementsworldbuilding: true
 clicordi: true
 clonedeploy: 'wiki.clonedeploy.org'
+ckc: true
 cnv: true
 cogitopedie: true
 communitydirectedsupport: true
