services on valentinawiki for T3223

--- a/services.yaml
+++ b/services.yaml
@@ -389,6 +389,7 @@ uolu: true
 usse: true
 uzenc: 'enc.for.uz'
 valentinaproject: 'wiki.valentinaproject.org'
+valentinawiki: true
 vanderbiltent: true
 vas: true
 velayat: true
