--- a/services.yaml
+++ b/services.yaml
@@ -262,6 +262,7 @@ openconstitution: true
 opengovpioneers: true
 opmi: true
 ourmxfest: true
+oryza: true
 overon: true
 oyeavdelingen: 'oyeavdelingen.org'
 panorama: true
