add marthaspeaks and thesciencearchives to services

--- a/services.yaml
+++ b/services.yaml
@@ -214,6 +214,7 @@ make717: 'wiki.make717.org'
 maktaba: 'en.maktaba.co.in'
 marinebiodiversitymatrix: 'marinebiodiversitymatrix.org'
 marioserieswiki: true
+marthaspeaks: true
 masseffect: true
 maxwell: true
 medergists: true
@@ -359,6 +360,7 @@ thecsc: true
 thefosters: true
 thehushhushsaga: true
 therubyserver: true
+thesciencearchives: true
 theworld: true
 titania: true
 tme: true
