--- a/services.yaml
+++ b/services.yaml
@@ -149,6 +149,7 @@ hshsinfoportal: true
 hsooden: true
 hytec: true
 icmscholars: true
+idolmaster: true
 idw: true
 ilearnthings: true
 imsts: true
