Enable services for allwikis fixes #T3359

--- a/services.yaml
+++ b/services.yaml
@@ -13,6 +13,7 @@ ale: true
 algopedia: true
 allthetropes: 'allthetropes.org'
 alternatehistory: true
+allwikis: true
 alwiki: 'www.alwiki.net'
 apneuvereniging: true
 archiwumsportowe: true
