--- a/services.yaml
+++ b/services.yaml
@@ -337,7 +337,7 @@ starsetonline: true
 stella: true
 stellachronica: true
 sthomaspri: true
-stjarnfestivalen: true
+stjarnfestivalen: 'saf.songcontests.eu'
 studentwiki: true
 studynotekr: true
 summerolympics: true
