add horizon per T3373

--- a/services.yaml
+++ b/services.yaml
@@ -147,6 +147,7 @@ hjelpemidler: true
 hkimgboard: true
 hobbies: true
 holonet: 'holonet.pw'
+horizon: true
 hshsinfoportal: true
 hsooden: true
 hytec: true
