add epicerieissy per T3375

--- a/services.yaml
+++ b/services.yaml
@@ -94,6 +94,7 @@ eerstelijnszones: 'www.eerstelijnszones.be'
 ellersliedemo: true
 engineeringmath: true
 enigma: true
+epicerieissy: true
 espiral: 'espiral.org'
 essway: true
 etpo: true
