didapro uses custom domain

--- a/services.yaml
+++ b/services.yaml
@@ -73,7 +73,7 @@ decrypted: 'decrypted.wiki'
 detlefs: true
 developingspace: true
 dicfic: true
-didapro: true
+didapro: 'encyclopedie.didactiqueprofessionnelle.org'
 discovereachother: true
 dish: true
 dmw: true
