add taotac.info to services

--- a/services.yaml
+++ b/services.yaml
@@ -346,6 +346,7 @@ studynotekr: true
 summerolympics: true
 svenskabriardklubben: 'wiki.svenskabriardklubben.se'
 tag: true
+ttinfo: 'taotac.info'
 takethatwiki: 'takethatwiki.com'
 taller: true
 tallerdecristianopedia: true
