--- a/services.yaml
+++ b/services.yaml
@@ -274,6 +274,7 @@ overon: true
 oyeavdelingen: 'oyeavdelingen.org'
 panorama: true
 paodeaoda: true
+paulsec: true
 r2: true
 pb2stof: true
 peopleshararam: true
