Enable services for newusopedia, piowiki and akancyclopedia fixes T3403

--- a/services.yaml
+++ b/services.yaml
@@ -8,6 +8,7 @@ agelonia: true
 aidorupedia: true
 air: true
 aisg: true
+akancyclopedia: true
 aktpos: true
 ale: true
 algopedia: true
@@ -250,6 +251,7 @@ neuronpedia: true
 newarkmanor: true
 newknowledge: true
 newtrend: true
+newusopedia: true
 nextlevelwiki: 'wiki.lbcomms.co.za'
 noalatala: true
 nomic: true
@@ -281,6 +283,7 @@ peopleshararam: true
 permanentfuturelab: 'permanentfuturelab.wiki'
 petctviewer: true
 pfsolutions: true
+piowiki: true
 pirategalaxy: true
 plasticssongcontest: true
 plazmaburst: true
