Remove using custom domain with clonedeploywiki

--- a/services.yaml
+++ b/services.yaml
@@ -56,7 +56,7 @@ civclassic: true
 civitas: true
 clementsworldbuilding: true
 clicordi: true
-clonedeploy: 'wiki.clonedeploy.org'
+clonedeploy: true
 ckc: true
 cnv: true
 cogitopedie: true
