add centralwiki, destinoswiki, ucroniawiki, mexicopediawiki, apunteswiki, repositoriowiki on services

--- a/services.yaml
+++ b/services.yaml
@@ -17,6 +17,7 @@ alternatehistory: true
 allwikis: true
 alwiki: 'www.alwiki.net'
 apneuvereniging: true
+apuntes: true
 archiwumsportowe: true
 arefepva: true
 artificercreations: true
@@ -46,6 +47,7 @@ carmeigat: true
 casuarina: true
 cdc: true
 cec: true
+central: true
 cccp: true
 changemyorg: true
 checkin: true
@@ -71,6 +73,7 @@ cybersecurity: true
 dalar: true
 datachron: true
 decrypted: 'decrypted.wiki'
+destinos: 
 detlefs: true
 developingspace: true
 dicfic: true
@@ -229,6 +232,7 @@ medicina: true
 menufeed: true
 meregos: 'meregos.com'
 meta: true
+mexicopedia: true
 mikeandchrisproductions: true
 mikrodev: 'wiki.mikrodev.com'
 mikrodevdocs: true
@@ -302,6 +306,7 @@ pythia: true
 qwerty: true
 raspberry: true
 rawdata: true
+repositorio: true
 renaissance: true
 revit: true
 reviwiki: 'reviwiki.info'
@@ -390,6 +395,7 @@ triseptsolutions: true
 trwc: true
 tsponie: true
 tws: true
+ucronia: true
 ubrwiki: true
 unab: true
 unmusicfest: true
