Add pdacwiki to services

--- a/services.yaml
+++ b/services.yaml
@@ -284,6 +284,7 @@ paodeaoda: true
 paulsec: true
 r2: true
 pb2stof: true
+pdac: true
 peopleshararam: true
 permanentfuturelab: 'permanentfuturelab.wiki'
 petctviewer: true
