add tallercentralwiki on services

--- a/services.yaml
+++ b/services.yaml
@@ -361,6 +361,7 @@ tag: true
 ttinfo: 'taotac.info'
 takethatwiki: 'takethatwiki.com'
 taller: true
+tallercentral: true
 tallerdecristianopedia: true
 tawseela: true
 tcc6640: true
