fix on services

--- a/services.yaml
+++ b/services.yaml
@@ -74,7 +74,7 @@ cybersecurity: true
 dalar: true
 datachron: true
 decrypted: 'decrypted.wiki'
-destinos: 
+destinos: true
 detlefs: true
 developingspace: true
 dicfic: true
