add ourwiki, ourrail, pmspace, oursource, programario, ourjoke, kasopedia, encyclopedia on services per T3440

--- a/services.yaml
+++ b/services.yaml
@@ -97,6 +97,7 @@ edmund: true
 edustudent: true
 eerstelijnszones: 'www.eerstelijnszones.be'
 ellersliedemo: true
+encyclopedia: true
 engineeringmath: true
 enigma: true
 epicerieissy: true
@@ -187,6 +188,7 @@ jwiki: true
 kai: true
 karmazynxyz: true
 karniaruthenia: true
+Kasopedia: true
 kassai: true
 kbrproject: true
 kerbalism: true
@@ -275,7 +277,11 @@ oolawiki: true
 openconstitution: true
 opengovpioneers: true
 opmi: true
+ourjoke: true
 ourmxfest: true
+ourrail: true
+oursource: true
+ourwiki: true
 oryza: true
 overon: true
 oyeavdelingen: 'oyeavdelingen.org'
@@ -295,7 +301,9 @@ plasticssongcontest: true
 plazmaburst: true
 plnonbinary: 'pl.nonbinary.wiki'
 pmav: true
+pmspace: true
 podpedia: true
+programario: true
 pq: true
 priyo: true
 prnet: 'wiki.pablojprieto.com.es'
