add diaroleplayswii on services per T3446

--- a/services.yaml
+++ b/services.yaml
@@ -77,6 +77,7 @@ decrypted: 'decrypted.wiki'
 destinos: true
 detlefs: true
 developingspace: true
+diaroleplays: true
 dicfic: true
 didapro: 'encyclopedie.didactiqueprofessionnelle.org'
 discovereachother: true
